--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,22 +3,22 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
 
-  <div class="form_group">
+  <div class="form-group">
     <%= f.label :name %>
     <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
   </div>
 
-  <div class="form_group form_check">
+  <div class="form-group form_check">
     <%= f.check_box :admin, class: "form-check-input", id: "admin-check-input" %>
     <%= f.label :admin, class: "form-check-label", for: "admin-check-input" %>
   </div>
 
-  <div class="form_group">
+  <div class="form-group">
     <%= f.label :email %>
     <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
   </div>
 
-  <div class="form_group">
+  <div class="form-group">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -26,7 +26,7 @@
     <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
   </div>
 
-  <div class="form_group">
+  <div class="form-group">
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
   </div>
