--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,6 +22,10 @@
             <li><%=link_to 'Create PicStory', new_story_path %></li>
             <li><%=link_to 'My PicStories', user_stories_path %></li>
             <li><%= link_to "My Profile", edit_user_registration_path %></li>
+            <% if current_user.admin? %>
+               <li role="separator" class="divider"></li>
+               <li><%= link_to "Control panel", user_admin_path %></li>
+            <% end %>
             <li role="separator" class="divider"></li>
             <li><%= link_to "Sign Out", destroy_user_session_path, method: "delete" %></li>
           <% else %>
